// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`snapshot with nothing in cart 1`] = `
<DocumentFragment>
  <div
    class="cart"
  >
    <h2>
      Cart
    </h2>
    <ul />
    <p>
      Total: 
      <span
        class="price"
      >
        €0.00
      </span>
    </p>
    <button>
      Checkout
    </button>
  </div>
</DocumentFragment>
`;

exports[`snapshot with some stuff in cart 1`] = `
<DocumentFragment>
  <div
    class="cart"
  >
    <h2>
      Cart
    </h2>
    <ul>
      <li>
        <span
          class="size"
        >
          M
        </span>
         –  
        <span
          class="type"
        >
          The Pepperoni Pizza
        </span>
         –  
        <span>
          $12.50
        </span>
      </li>
      <li>
        <span
          class="size"
        >
          L
        </span>
         –  
        <span
          class="type"
        >
          The Chicken Pesto Pizza
        </span>
         –  
        <span>
          $20.75
        </span>
      </li>
      <li>
        <span
          class="size"
        >
          S
        </span>
         –  
        <span
          class="type"
        >
          The Barbecue Chicken Pizza
        </span>
         –  
        <span>
          $12.75
        </span>
      </li>
    </ul>
    <p>
      Total: 
      <span
        class="price"
      >
        €46.00
      </span>
    </p>
    <button>
      Checkout
    </button>
  </div>
</DocumentFragment>
`;
